added IF component, did some conditional rendering on personal page, small style tweaks, added a default tool image that loads on a broken image link

--- a/crystal-dashboard/src/assets/styles/base.scss
+++ b/crystal-dashboard/src/assets/styles/base.scss
@@ -22,6 +22,7 @@ $pe-7s-font-path: "~pe7-icon/dist/fonts" !default;
 @import 'base/tags';
 @import 'react-dates/styles';
 @import 'base/lists';
+@import 'base/links';
 
 html, body {
   font-size: 14px;
